[package]
name = "r2lay"
version = "0.0.1"
authors = ["FuseTim <fusetim@gmx.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["net","rt","macros", "rt-multi-thread", "io-util"] }
anyhow = "1.0"
structopt = "0.3"